@@ -5,10 +5,7 @@ dependencies {
 
   implementation group: 'net.sf.jung', name: 'jung-graph-impl', version: '2.0.1'
   implementation group: 'net.sf.jung', name: 'jung-algorithms', version: '2.0.1'
-}
 
-if (JavaVersion.current().isJava9Compatible()) {
-	tasks.withType(JavaCompile) {
-		options.compilerArgs.addAll(['--add-modules', 'java.xml.bind'])
-    }
+  // java.xml.bind has been removed from jdk since java 11
+  implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3"
 }
